<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="feels_like">Feels like</string>
    <string name="uv_index">UV Index</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="dew_point">Dew Point</string>
    <string name="visibility">Visibility</string>
    <string name="unit_ms">m/s</string>
    <string name="unit_mph">mph</string>

    <string name="unit_kmh">km/h</string>
    <string name="unit_mb">mb</string>
    <string name="Low">Low</string>

    <string name="menu_home">Home</string>
    <string name="menu_fav">Favourite</string>
    <string name="menu_setting">Setting</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>

    <string name="settings_header">Weather Settings</string>
    <string name="location_preference">Location Preference</string>
    <string name="gps">GPS</string>
    <string name="language">Language</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="mycurrentlocation"> My Current Location</string>
    <string name="managelocations">Manage Locations</string>
    <string name="addalert">Add Alert</string>
    <string name="weather_alert">Weather Alert</string>
    <string name="notification_message">Current weather: %1$s, Temp: %2$d°C</string>
    <string name="no_weather_data">No weather data</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="alert_title">Set Alert</string>
    <string name="please_select">Please select date and time</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="delete_alert_message">Deleting this alert will stop all weather notifications for these conditions. This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_search">Search\n</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="unit_celsius">Celsius</string>
    <string name="unit_fahrenheit">Fahrenheit</string>
    <string name="unit_kelvin">Kelvin</string>
    <string name="unit_meter_per_sec">Meter/sec</string>
    <string name="unit_miles_per_hour">Miles/hour</string>
    <string name="language_set_to">Language set to %1$s</string>
    <string name="temperature_unit_set_to">Temperature unit set to %1$s</string>
    <string name="wind_speed_unit_set_to">Wind speed unit set to %1$s</string>



    <string name="time_error">Selected time is in the past</string>
    <string name="alert_set_successfully">Alert set successfully</string>
    <string name="fav_delete_successfully">Favourite Deleted</string>
    <string name="location_set">Location Set to Favourite</string>
    <string name="location_source_set_to">Location source set to %1$s</string>
    <string name="map">Map</string>
    <string name="location_added">added</string>

    <!-- Temperature units options -->
    <string-array name="temperature_units">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <!-- Wind speed units options -->
    <string-array name="wind_speed_units">
        <item>Meter/sec</item>
        <item>Miles/hour</item>
    </string-array>

    <!-- Language options -->
    <string-array name="language_options">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="temp_units">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

</resources>