<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weather.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_alertFragment"
            app:destination="@id/alertFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.weather.ui.favourite.FavouriteFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_nav_favorite_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_nav_favorite_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weather.ui.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.weather.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weather.ui.alert.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />
</navigation>