<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header Text -->
        <TextView
            android:id="@+id/tvSettingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/settings_header"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnPrimarySurface"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Location and Language Group -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_language_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_card_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSettingsHeader">

            <!-- Location Preference -->
            <TextView
                android:id="@+id/tvLocationPreference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/location_preference"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switchLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLocationPreference" />

            <!-- Divider -->
            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLocationPreference" />

            <!-- Language Preference -->
            <TextView
                android:id="@+id/tvLanguagePreference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/language"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:entries="@array/language_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLanguagePreference" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Temperature and Wind Speed Group -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/temp_wind_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_card_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_language_group">

            <!-- Temperature Unit -->
            <TextView
                android:id="@+id/tvTempUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/temperature_unit"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerTempUnit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:entries="@array/temp_units"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTempUnit" />

            <!-- Divider -->
            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:alpha="0.2"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerTempUnit" />

            <!-- Wind Speed Unit -->
            <TextView
                android:id="@+id/tvWindSpeedUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/wind_speed_unit"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <Spinner
                android:id="@+id/spinnerWindSpeedUnit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="5dp"
                android:background="?attr/selectableItemBackground"
                android:entries="@array/wind_speed_units"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWindSpeedUnit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
